--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 * {
-    cursor:url(coeur.cur),auto;
+    cursor:url(coeurB.cur),auto;
 }
 ::selection {
     background-color: #ff6f91;
     color: white;
-
+    cursor:url(coeur.cur),auto;
 }
 body{
     background-color: #ffebeb;
@@ -31,7 +31,7 @@ h2{
     margin-top: 60px;
     margin-bottom: 30px;
 }
-button {
+.btn-group button {
     font-size: 1.5em;
     padding: 15px 35px;
     margin: 0;
@@ -40,7 +40,6 @@ button {
     background: linear-gradient(135deg, #ffb6d5 0%, #ff6f91 100%);
     color: #fff;
     box-shadow: 0 4px 16px rgba(170,8,76,0.15);
-    /* cursor: pointer; */
     transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
     font-family: 'Georgia', 'Times New Roman', Times, serif;
     letter-spacing: 1px;
@@ -50,4 +49,75 @@ button:hover {
     background: #ff6f91;
     transform: translateY(-4px) scale(1.05);
     box-shadow: 0 8px 24px rgba(170,8,76,0.25);
+    cursor:url(coeur.cur),auto;
+}
+
+.switch {
+  position: fixed;
+  bottom: 70px;
+  right: 70px;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* enlever la case */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+p{
+  position: fixed;
+  bottom: 100px;
+  right: 50px;
+}
+
+/* bouton slide */
+.slider {
+  position: absolute;
+  cursor:url(coeur.cur),auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #aa084c;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: #fff;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #ff6f91;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #ff6f91;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
